Updated usage message

--- a/man/fidostat.1
+++ b/man/fidostat.1
@@ -9,7 +9,7 @@ fidostat is a a log file analyser for the binkd TCP/IP FTN mailer. It is intende
 .IP binkdall
 List all binkd connections (one line per connection, i.e., possibly more than one line per node)
 .IP binkdstat
-Summarize all binkd connections (one line per node)
+Summarize binkd connections (one line per node)
 .SH FILES
 .IP binkd.log
 The binkd log file, which is expected to be present in the husky log directory (specified using the FidonetLogsDir variable in your husky configuration file).
